<resources>
    <string name="app_name">IMKB Hisse Senetleri ve Endeksler</string>


    <string name="stock_and_index_text">Hisse ve Endeksler</string>
    <string name="increasing_text">Yükselenler</string>
    <string name="decreasing_text">Düşenler</string>
    <string name="volume40_text">Hacme Göre - 30</string>
    <string name="volume50_text">Hacme Göre - 50</string>
    <string name="volume100_text">Hacme Göre - 100</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="filter_all">all</string>
    <string name="filter_increasing">increasing</string>
    <string name="filter_decreasing">decreasing</string>
    <string name="filter_volume30">volume30</string>
    <string name="filter_volume50">volume50</string>
    <string name="filter_volume100">volume100</string>

    <string name="symbol_text">Symbol</string>
    <string name="price_text">Fiyat</string>
    <string name="change_text">% Fark</string>
    <string name="volume_text">Hacim</string>
    <string name="bid_text">Alış</string>
    <string name="offer_text">Satış</string>
    <string name="lowest_text">Günlük Düşük</string>
    <string name="highest_text">Günlük Yüksek</string>
    <string name="count_text">Adet</string>
    <string name="maximum_text">Tavan</string>
    <string name="minimum_text">Taban</string>
    <string name="isUp_text">Değişim</string>

    <string name="dash">-</string>
    <string name="error_message">Bir sorun oluştu.</string>
    <string name="search_text">Ara</string>
    <string name="header_title_text">VERIPARK</string>
    <string name="header_sub_title_text">IMKB Hisse Senetleri/Endeksler</string>


</resources>