<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/stock_and_index"
            android:title="@string/stock_and_index_text" />
        <item
            android:id="@+id/increasing"
            android:title="@string/increasing_text" />
        <item
            android:id="@+id/decreasing"
            android:title="@string/decreasing_text" />
        <item
            android:id="@+id/volume30"
            android:title="@string/volume40_text" />
        <item
            android:id="@+id/volume50"
            android:title="@string/volume50_text" />
        <item
            android:id="@+id/volume100"
            android:title="@string/volume100_text" />
    </group>
</menu>
